ProgramaFinal/parser2.output
Terminals unused in grammar

   DEFAULT


Grammar

    0 $accept: programa $end

    1 programa: declaraciones funciones

    2 declaraciones: tipo lista_var SEMICOLON declaraciones
    3              | tipo_registro lista_var SEMICOLON declaraciones
    4              | /* empty */

    5 tipo_registro: STRUCT START declaraciones END

    6 tipo: base tipo_arreglo

    7 base: INT
    8     | FLOAT
    9     | DOUBLE
   10     | CHAR
   11     | VOID

   12 tipo_arreglo: LSQBRACK NUM RSQBRACK tipo_arreglo
   13             | /* empty */

   14 lista_var: lista_var COMMA ID
   15          | ID

   16 funciones: DEF tipo ID LPAR argumentos RPAR START declaraciones sentencias END funciones
   17          | /* empty */

   18 argumentos: lista_arg
   19           | VOID

   20 lista_arg: lista_arg COMMA arg
   21          | arg

   22 arg: tipo_arg ID

   23 tipo_arg: base param_arr

   24 param_arr: LSQBRACK RSQBRACK param_arr
   25          | /* empty */

   26 sentencias: sentencias sentencia
   27           | sentencia

   28 sentencia: IF e_bool THEN sentencia END
   29          | IF e_bool THEN sentencia ELSE sentencia END
   30          | WHILE e_bool DO sentencia END
   31          | DO sentencia WHILE e_bool SEMICOLON
   32          | SWITCH LPAR variable RPAR DO casos predeterminado END
   33          | variable ASSIGN expresion SEMICOLON
   34          | PRINT expresion SEMICOLON
   35          | SCAN variable SEMICOLON
   36          | RETURN SEMICOLON
   37          | RETURN expresion SEMICOLON
   38          | BREAK SEMICOLON
   39          | START sentencias END

   40 casos: CASE NUM COLON sentencia casos
   41      | CASE NUM COLON sentencia

   42 predeterminado: PRED COLON sentencia
   43               | /* empty */

   44 e_bool: e_bool OR e_bool
   45       | e_bool AND e_bool
   46       | NOT e_bool
   47       | relacional
   48       | TRUE
   49       | FALSE

   50 relacional: relacional GREATER relacional
   51           | relacional LESS relacional
   52           | relacional LT relacional
   53           | relacional GT relacional
   54           | relacional NOTEQUAL relacional
   55           | relacional EQUAL relacional
   56           | expresion

   57 expresion: expresion PLUS expresion
   58          | expresion MINUS expresion
   59          | expresion MUL expresion
   60          | expresion DIV expresion
   61          | expresion MOD expresion
   62          | LPAR expresion RPAR
   63          | variable
   64          | NUM
   65          | STRING
   66          | CHAR

   67 variable: ID variable_comp

   68 variable_comp: dato_est_sim
   69              | arreglo
   70              | LPAR parametros RPAR

   71 dato_est_sim: dato_est_sim POINT ID
   72             | /* empty */

   73 arreglo: LSQBRACK expresion RSQBRACK
   74        | arreglo LSQBRACK expresion RSQBRACK

   75 parametros: lista_param
   76           | /* empty */

   77 lista_param: lista_param COMMA expresion
   78            | expresion


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 14 15 16 22 67 71
NUM (259) 12 40 41 64
STRING (260) 65
CHAR (261) 10 66
START (262) 5 16 39
END (263) 5 16 28 29 30 32 39
INT (264) 7
FLOAT (265) 8
DOUBLE (266) 9
VOID (267) 11 19
STRUCT (268) 5
COLON (269) 40 41 42
COMMA (270) 14 20 77
WHILE (271) 30 31
DO (272) 30 31 32
PRINT (273) 34
SCAN (274) 35
PRED (275) 42
RETURN (276) 36 37
SWITCH (277) 32
BREAK (278) 38
CASE (279) 40 41
DEF (280) 16
DEFAULT (281)
SEMICOLON (282) 2 3 31 33 34 35 36 37 38
POINT (283) 71
TRUE (284) 48
FALSE (285) 49
ASSIGN (286) 33
OR (287) 44
AND (288) 45
NOTEQUAL (289) 54
EQUAL (290) 55
GT (291) 53
LT (292) 52
LESS (293) 51
GREATER (294) 50
MINUS (295) 58
PLUS (296) 57
MOD (297) 61
DIV (298) 60
MUL (299) 59
NOT (300) 46
RSQBRACK (301) 12 24 73 74
LSQBRACK (302) 12 24 73 74
RPAR (303) 16 32 62 70
LPAR (304) 16 32 62 70
THEN (305) 28 29
IF (306) 28 29
SIT (307)
ELSE (308) 29


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
programa (55)
    on left: 1, on right: 0
declaraciones (56)
    on left: 2 3 4, on right: 1 2 3 5 16
tipo_registro (57)
    on left: 5, on right: 3
tipo (58)
    on left: 6, on right: 2 16
base (59)
    on left: 7 8 9 10 11, on right: 6 23
tipo_arreglo (60)
    on left: 12 13, on right: 6 12
lista_var (61)
    on left: 14 15, on right: 2 3 14
funciones (62)
    on left: 16 17, on right: 1 16
argumentos (63)
    on left: 18 19, on right: 16
lista_arg (64)
    on left: 20 21, on right: 18 20
arg (65)
    on left: 22, on right: 20 21
tipo_arg (66)
    on left: 23, on right: 22
param_arr (67)
    on left: 24 25, on right: 23 24
sentencias (68)
    on left: 26 27, on right: 16 26 39
sentencia (69)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39, on right: 26 27 28
    29 30 31 40 41 42
casos (70)
    on left: 40 41, on right: 32 40
predeterminado (71)
    on left: 42 43, on right: 32
e_bool (72)
    on left: 44 45 46 47 48 49, on right: 28 29 30 31 44 45 46
relacional (73)
    on left: 50 51 52 53 54 55 56, on right: 47 50 51 52 53 54 55
expresion (74)
    on left: 57 58 59 60 61 62 63 64 65 66, on right: 33 34 37 56 57
    58 59 60 61 62 73 74 77 78
variable (75)
    on left: 67, on right: 32 33 35 63
variable_comp (76)
    on left: 68 69 70, on right: 67
dato_est_sim (77)
    on left: 71 72, on right: 68 71
arreglo (78)
    on left: 73 74, on right: 69 74
parametros (79)
    on left: 75 76, on right: 70
lista_param (80)
    on left: 77 78, on right: 75 77


State 0

    0 $accept: . programa $end

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6

    $default  reduce using rule 4 (declaraciones)

    programa       go to state 7
    declaraciones  go to state 8
    tipo_registro  go to state 9
    tipo           go to state 10
    base           go to state 11


State 1

   10 base: CHAR .

    $default  reduce using rule 10 (base)


State 2

    7 base: INT .

    $default  reduce using rule 7 (base)


State 3

    8 base: FLOAT .

    $default  reduce using rule 8 (base)


State 4

    9 base: DOUBLE .

    $default  reduce using rule 9 (base)


State 5

   11 base: VOID .

    $default  reduce using rule 11 (base)


State 6

    5 tipo_registro: STRUCT . START declaraciones END

    START  shift, and go to state 12


State 7

    0 $accept: programa . $end

    $end  shift, and go to state 13


State 8

    1 programa: declaraciones . funciones

    DEF  shift, and go to state 14

    $default  reduce using rule 17 (funciones)

    funciones  go to state 15


State 9

    3 declaraciones: tipo_registro . lista_var SEMICOLON declaraciones

    ID  shift, and go to state 16

    lista_var  go to state 17


State 10

    2 declaraciones: tipo . lista_var SEMICOLON declaraciones

    ID  shift, and go to state 16

    lista_var  go to state 18


State 11

    6 tipo: base . tipo_arreglo

    LSQBRACK  shift, and go to state 19

    $default  reduce using rule 13 (tipo_arreglo)

    tipo_arreglo  go to state 20


State 12

    5 tipo_registro: STRUCT START . declaraciones END

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6

    $default  reduce using rule 4 (declaraciones)

    declaraciones  go to state 21
    tipo_registro  go to state 9
    tipo           go to state 10
    base           go to state 11


State 13

    0 $accept: programa $end .

    $default  accept


State 14

   16 funciones: DEF . tipo ID LPAR argumentos RPAR START declaraciones sentencias END funciones

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    tipo  go to state 22
    base  go to state 11


State 15

    1 programa: declaraciones funciones .

    $default  reduce using rule 1 (programa)


State 16

   15 lista_var: ID .

    $default  reduce using rule 15 (lista_var)


State 17

    3 declaraciones: tipo_registro lista_var . SEMICOLON declaraciones
   14 lista_var: lista_var . COMMA ID

    COMMA      shift, and go to state 23
    SEMICOLON  shift, and go to state 24


State 18

    2 declaraciones: tipo lista_var . SEMICOLON declaraciones
   14 lista_var: lista_var . COMMA ID

    COMMA      shift, and go to state 23
    SEMICOLON  shift, and go to state 25


State 19

   12 tipo_arreglo: LSQBRACK . NUM RSQBRACK tipo_arreglo

    NUM  shift, and go to state 26


State 20

    6 tipo: base tipo_arreglo .

    $default  reduce using rule 6 (tipo)


State 21

    5 tipo_registro: STRUCT START declaraciones . END

    END  shift, and go to state 27


State 22

   16 funciones: DEF tipo . ID LPAR argumentos RPAR START declaraciones sentencias END funciones

    ID  shift, and go to state 28


State 23

   14 lista_var: lista_var COMMA . ID

    ID  shift, and go to state 29


State 24

    3 declaraciones: tipo_registro lista_var SEMICOLON . declaraciones

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6

    $default  reduce using rule 4 (declaraciones)

    declaraciones  go to state 30
    tipo_registro  go to state 9
    tipo           go to state 10
    base           go to state 11


State 25

    2 declaraciones: tipo lista_var SEMICOLON . declaraciones

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6

    $default  reduce using rule 4 (declaraciones)

    declaraciones  go to state 31
    tipo_registro  go to state 9
    tipo           go to state 10
    base           go to state 11


State 26

   12 tipo_arreglo: LSQBRACK NUM . RSQBRACK tipo_arreglo

    RSQBRACK  shift, and go to state 32


State 27

    5 tipo_registro: STRUCT START declaraciones END .

    $default  reduce using rule 5 (tipo_registro)


State 28

   16 funciones: DEF tipo ID . LPAR argumentos RPAR START declaraciones sentencias END funciones

    LPAR  shift, and go to state 33


State 29

   14 lista_var: lista_var COMMA ID .

    $default  reduce using rule 14 (lista_var)


State 30

    3 declaraciones: tipo_registro lista_var SEMICOLON declaraciones .

    $default  reduce using rule 3 (declaraciones)


State 31

    2 declaraciones: tipo lista_var SEMICOLON declaraciones .

    $default  reduce using rule 2 (declaraciones)


State 32

   12 tipo_arreglo: LSQBRACK NUM RSQBRACK . tipo_arreglo

    LSQBRACK  shift, and go to state 19

    $default  reduce using rule 13 (tipo_arreglo)

    tipo_arreglo  go to state 34


State 33

   16 funciones: DEF tipo ID LPAR . argumentos RPAR START declaraciones sentencias END funciones

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 35

    base        go to state 36
    argumentos  go to state 37
    lista_arg   go to state 38
    arg         go to state 39
    tipo_arg    go to state 40


State 34

   12 tipo_arreglo: LSQBRACK NUM RSQBRACK tipo_arreglo .

    $default  reduce using rule 12 (tipo_arreglo)


State 35

   11 base: VOID .
   19 argumentos: VOID .

    RPAR      reduce using rule 19 (argumentos)
    $default  reduce using rule 11 (base)


State 36

   23 tipo_arg: base . param_arr

    LSQBRACK  shift, and go to state 41

    $default  reduce using rule 25 (param_arr)

    param_arr  go to state 42


State 37

   16 funciones: DEF tipo ID LPAR argumentos . RPAR START declaraciones sentencias END funciones

    RPAR  shift, and go to state 43


State 38

   18 argumentos: lista_arg .
   20 lista_arg: lista_arg . COMMA arg

    COMMA  shift, and go to state 44

    $default  reduce using rule 18 (argumentos)


State 39

   21 lista_arg: arg .

    $default  reduce using rule 21 (lista_arg)


State 40

   22 arg: tipo_arg . ID

    ID  shift, and go to state 45


State 41

   24 param_arr: LSQBRACK . RSQBRACK param_arr

    RSQBRACK  shift, and go to state 46


State 42

   23 tipo_arg: base param_arr .

    $default  reduce using rule 23 (tipo_arg)


State 43

   16 funciones: DEF tipo ID LPAR argumentos RPAR . START declaraciones sentencias END funciones

    START  shift, and go to state 47


State 44

   20 lista_arg: lista_arg COMMA . arg

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5

    base      go to state 36
    arg       go to state 48
    tipo_arg  go to state 40


State 45

   22 arg: tipo_arg ID .

    $default  reduce using rule 22 (arg)


State 46

   24 param_arr: LSQBRACK RSQBRACK . param_arr

    LSQBRACK  shift, and go to state 41

    $default  reduce using rule 25 (param_arr)

    param_arr  go to state 49


State 47

   16 funciones: DEF tipo ID LPAR argumentos RPAR START . declaraciones sentencias END funciones

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    DOUBLE  shift, and go to state 4
    VOID    shift, and go to state 5
    STRUCT  shift, and go to state 6

    $default  reduce using rule 4 (declaraciones)

    declaraciones  go to state 50
    tipo_registro  go to state 9
    tipo           go to state 10
    base           go to state 11


State 48

   20 lista_arg: lista_arg COMMA arg .

    $default  reduce using rule 20 (lista_arg)


State 49

   24 param_arr: LSQBRACK RSQBRACK param_arr .

    $default  reduce using rule 24 (param_arr)


State 50

   16 funciones: DEF tipo ID LPAR argumentos RPAR START declaraciones . sentencias END funciones

    ID      shift, and go to state 51
    START   shift, and go to state 52
    WHILE   shift, and go to state 53
    DO      shift, and go to state 54
    PRINT   shift, and go to state 55
    SCAN    shift, and go to state 56
    RETURN  shift, and go to state 57
    SWITCH  shift, and go to state 58
    BREAK   shift, and go to state 59
    IF      shift, and go to state 60

    sentencias  go to state 61
    sentencia   go to state 62
    variable    go to state 63


State 51

   67 variable: ID . variable_comp

    LSQBRACK  shift, and go to state 64
    LPAR      shift, and go to state 65

    $default  reduce using rule 72 (dato_est_sim)

    variable_comp  go to state 66
    dato_est_sim   go to state 67
    arreglo        go to state 68


State 52

   39 sentencia: START . sentencias END

    ID      shift, and go to state 51
    START   shift, and go to state 52
    WHILE   shift, and go to state 53
    DO      shift, and go to state 54
    PRINT   shift, and go to state 55
    SCAN    shift, and go to state 56
    RETURN  shift, and go to state 57
    SWITCH  shift, and go to state 58
    BREAK   shift, and go to state 59
    IF      shift, and go to state 60

    sentencias  go to state 69
    sentencia   go to state 62
    variable    go to state 63


State 53

   30 sentencia: WHILE . e_bool DO sentencia END

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    TRUE    shift, and go to state 73
    FALSE   shift, and go to state 74
    NOT     shift, and go to state 75
    LPAR    shift, and go to state 76

    e_bool      go to state 77
    relacional  go to state 78
    expresion   go to state 79
    variable    go to state 80


State 54

   31 sentencia: DO . sentencia WHILE e_bool SEMICOLON

    ID      shift, and go to state 51
    START   shift, and go to state 52
    WHILE   shift, and go to state 53
    DO      shift, and go to state 54
    PRINT   shift, and go to state 55
    SCAN    shift, and go to state 56
    RETURN  shift, and go to state 57
    SWITCH  shift, and go to state 58
    BREAK   shift, and go to state 59
    IF      shift, and go to state 60

    sentencia  go to state 81
    variable   go to state 63


State 55

   34 sentencia: PRINT . expresion SEMICOLON

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    expresion  go to state 82
    variable   go to state 80


State 56

   35 sentencia: SCAN . variable SEMICOLON

    ID  shift, and go to state 51

    variable  go to state 83


State 57

   36 sentencia: RETURN . SEMICOLON
   37          | RETURN . expresion SEMICOLON

    ID         shift, and go to state 51
    NUM        shift, and go to state 70
    STRING     shift, and go to state 71
    CHAR       shift, and go to state 72
    SEMICOLON  shift, and go to state 84
    LPAR       shift, and go to state 76

    expresion  go to state 85
    variable   go to state 80


State 58

   32 sentencia: SWITCH . LPAR variable RPAR DO casos predeterminado END

    LPAR  shift, and go to state 86


State 59

   38 sentencia: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 87


State 60

   28 sentencia: IF . e_bool THEN sentencia END
   29          | IF . e_bool THEN sentencia ELSE sentencia END

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    TRUE    shift, and go to state 73
    FALSE   shift, and go to state 74
    NOT     shift, and go to state 75
    LPAR    shift, and go to state 76

    e_bool      go to state 88
    relacional  go to state 78
    expresion   go to state 79
    variable    go to state 80


State 61

   16 funciones: DEF tipo ID LPAR argumentos RPAR START declaraciones sentencias . END funciones
   26 sentencias: sentencias . sentencia

    ID      shift, and go to state 51
    START   shift, and go to state 52
    END     shift, and go to state 89
    WHILE   shift, and go to state 53
    DO      shift, and go to state 54
    PRINT   shift, and go to state 55
    SCAN    shift, and go to state 56
    RETURN  shift, and go to state 57
    SWITCH  shift, and go to state 58
    BREAK   shift, and go to state 59
    IF      shift, and go to state 60

    sentencia  go to state 90
    variable   go to state 63


State 62

   27 sentencias: sentencia .

    $default  reduce using rule 27 (sentencias)


State 63

   33 sentencia: variable . ASSIGN expresion SEMICOLON

    ASSIGN  shift, and go to state 91


State 64

   73 arreglo: LSQBRACK . expresion RSQBRACK

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    expresion  go to state 92
    variable   go to state 80


State 65

   70 variable_comp: LPAR . parametros RPAR

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    $default  reduce using rule 76 (parametros)

    expresion    go to state 93
    variable     go to state 80
    parametros   go to state 94
    lista_param  go to state 95


State 66

   67 variable: ID variable_comp .

    $default  reduce using rule 67 (variable)


State 67

   68 variable_comp: dato_est_sim .
   71 dato_est_sim: dato_est_sim . POINT ID

    POINT  shift, and go to state 96

    $default  reduce using rule 68 (variable_comp)


State 68

   69 variable_comp: arreglo .
   74 arreglo: arreglo . LSQBRACK expresion RSQBRACK

    LSQBRACK  shift, and go to state 97

    $default  reduce using rule 69 (variable_comp)


State 69

   26 sentencias: sentencias . sentencia
   39 sentencia: START sentencias . END

    ID      shift, and go to state 51
    START   shift, and go to state 52
    END     shift, and go to state 98
    WHILE   shift, and go to state 53
    DO      shift, and go to state 54
    PRINT   shift, and go to state 55
    SCAN    shift, and go to state 56
    RETURN  shift, and go to state 57
    SWITCH  shift, and go to state 58
    BREAK   shift, and go to state 59
    IF      shift, and go to state 60

    sentencia  go to state 90
    variable   go to state 63


State 70

   64 expresion: NUM .

    $default  reduce using rule 64 (expresion)


State 71

   65 expresion: STRING .

    $default  reduce using rule 65 (expresion)


State 72

   66 expresion: CHAR .

    $default  reduce using rule 66 (expresion)


State 73

   48 e_bool: TRUE .

    $default  reduce using rule 48 (e_bool)


State 74

   49 e_bool: FALSE .

    $default  reduce using rule 49 (e_bool)


State 75

   46 e_bool: NOT . e_bool

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    TRUE    shift, and go to state 73
    FALSE   shift, and go to state 74
    NOT     shift, and go to state 75
    LPAR    shift, and go to state 76

    e_bool      go to state 99
    relacional  go to state 78
    expresion   go to state 79
    variable    go to state 80


State 76

   62 expresion: LPAR . expresion RPAR

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    expresion  go to state 100
    variable   go to state 80


State 77

   30 sentencia: WHILE e_bool . DO sentencia END
   44 e_bool: e_bool . OR e_bool
   45       | e_bool . AND e_bool

    DO   shift, and go to state 101
    OR   shift, and go to state 102
    AND  shift, and go to state 103


State 78

   47 e_bool: relacional .
   50 relacional: relacional . GREATER relacional
   51           | relacional . LESS relacional
   52           | relacional . LT relacional
   53           | relacional . GT relacional
   54           | relacional . NOTEQUAL relacional
   55           | relacional . EQUAL relacional

    NOTEQUAL  shift, and go to state 104
    EQUAL     shift, and go to state 105
    GT        shift, and go to state 106
    LT        shift, and go to state 107
    LESS      shift, and go to state 108
    GREATER   shift, and go to state 109

    $default  reduce using rule 47 (e_bool)


State 79

   56 relacional: expresion .
   57 expresion: expresion . PLUS expresion
   58          | expresion . MINUS expresion
   59          | expresion . MUL expresion
   60          | expresion . DIV expresion
   61          | expresion . MOD expresion

    MINUS  shift, and go to state 110
    PLUS   shift, and go to state 111
    MOD    shift, and go to state 112
    DIV    shift, and go to state 113
    MUL    shift, and go to state 114

    $default  reduce using rule 56 (relacional)


State 80

   63 expresion: variable .

    $default  reduce using rule 63 (expresion)


State 81

   31 sentencia: DO sentencia . WHILE e_bool SEMICOLON

    WHILE  shift, and go to state 115


State 82

   34 sentencia: PRINT expresion . SEMICOLON
   57 expresion: expresion . PLUS expresion
   58          | expresion . MINUS expresion
   59          | expresion . MUL expresion
   60          | expresion . DIV expresion
   61          | expresion . MOD expresion

    SEMICOLON  shift, and go to state 116
    MINUS      shift, and go to state 110
    PLUS       shift, and go to state 111
    MOD        shift, and go to state 112
    DIV        shift, and go to state 113
    MUL        shift, and go to state 114


State 83

   35 sentencia: SCAN variable . SEMICOLON

    SEMICOLON  shift, and go to state 117


State 84

   36 sentencia: RETURN SEMICOLON .

    $default  reduce using rule 36 (sentencia)


State 85

   37 sentencia: RETURN expresion . SEMICOLON
   57 expresion: expresion . PLUS expresion
   58          | expresion . MINUS expresion
   59          | expresion . MUL expresion
   60          | expresion . DIV expresion
   61          | expresion . MOD expresion

    SEMICOLON  shift, and go to state 118
    MINUS      shift, and go to state 110
    PLUS       shift, and go to state 111
    MOD        shift, and go to state 112
    DIV        shift, and go to state 113
    MUL        shift, and go to state 114


State 86

   32 sentencia: SWITCH LPAR . variable RPAR DO casos predeterminado END

    ID  shift, and go to state 51

    variable  go to state 119


State 87

   38 sentencia: BREAK SEMICOLON .

    $default  reduce using rule 38 (sentencia)


State 88

   28 sentencia: IF e_bool . THEN sentencia END
   29          | IF e_bool . THEN sentencia ELSE sentencia END
   44 e_bool: e_bool . OR e_bool
   45       | e_bool . AND e_bool

    OR    shift, and go to state 102
    AND   shift, and go to state 103
    THEN  shift, and go to state 120


State 89

   16 funciones: DEF tipo ID LPAR argumentos RPAR START declaraciones sentencias END . funciones

    DEF  shift, and go to state 14

    $default  reduce using rule 17 (funciones)

    funciones  go to state 121


State 90

   26 sentencias: sentencias sentencia .

    $default  reduce using rule 26 (sentencias)


State 91

   33 sentencia: variable ASSIGN . expresion SEMICOLON

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    expresion  go to state 122
    variable   go to state 80


State 92

   57 expresion: expresion . PLUS expresion
   58          | expresion . MINUS expresion
   59          | expresion . MUL expresion
   60          | expresion . DIV expresion
   61          | expresion . MOD expresion
   73 arreglo: LSQBRACK expresion . RSQBRACK

    MINUS     shift, and go to state 110
    PLUS      shift, and go to state 111
    MOD       shift, and go to state 112
    DIV       shift, and go to state 113
    MUL       shift, and go to state 114
    RSQBRACK  shift, and go to state 123


State 93

   57 expresion: expresion . PLUS expresion
   58          | expresion . MINUS expresion
   59          | expresion . MUL expresion
   60          | expresion . DIV expresion
   61          | expresion . MOD expresion
   78 lista_param: expresion .

    MINUS  shift, and go to state 110
    PLUS   shift, and go to state 111
    MOD    shift, and go to state 112
    DIV    shift, and go to state 113
    MUL    shift, and go to state 114

    $default  reduce using rule 78 (lista_param)


State 94

   70 variable_comp: LPAR parametros . RPAR

    RPAR  shift, and go to state 124


State 95

   75 parametros: lista_param .
   77 lista_param: lista_param . COMMA expresion

    COMMA  shift, and go to state 125

    $default  reduce using rule 75 (parametros)


State 96

   71 dato_est_sim: dato_est_sim POINT . ID

    ID  shift, and go to state 126


State 97

   74 arreglo: arreglo LSQBRACK . expresion RSQBRACK

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    expresion  go to state 127
    variable   go to state 80


State 98

   39 sentencia: START sentencias END .

    $default  reduce using rule 39 (sentencia)


State 99

   44 e_bool: e_bool . OR e_bool
   45       | e_bool . AND e_bool
   46       | NOT e_bool .

    $default  reduce using rule 46 (e_bool)


State 100

   57 expresion: expresion . PLUS expresion
   58          | expresion . MINUS expresion
   59          | expresion . MUL expresion
   60          | expresion . DIV expresion
   61          | expresion . MOD expresion
   62          | LPAR expresion . RPAR

    MINUS  shift, and go to state 110
    PLUS   shift, and go to state 111
    MOD    shift, and go to state 112
    DIV    shift, and go to state 113
    MUL    shift, and go to state 114
    RPAR   shift, and go to state 128


State 101

   30 sentencia: WHILE e_bool DO . sentencia END

    ID      shift, and go to state 51
    START   shift, and go to state 52
    WHILE   shift, and go to state 53
    DO      shift, and go to state 54
    PRINT   shift, and go to state 55
    SCAN    shift, and go to state 56
    RETURN  shift, and go to state 57
    SWITCH  shift, and go to state 58
    BREAK   shift, and go to state 59
    IF      shift, and go to state 60

    sentencia  go to state 129
    variable   go to state 63


State 102

   44 e_bool: e_bool OR . e_bool

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    TRUE    shift, and go to state 73
    FALSE   shift, and go to state 74
    NOT     shift, and go to state 75
    LPAR    shift, and go to state 76

    e_bool      go to state 130
    relacional  go to state 78
    expresion   go to state 79
    variable    go to state 80


State 103

   45 e_bool: e_bool AND . e_bool

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    TRUE    shift, and go to state 73
    FALSE   shift, and go to state 74
    NOT     shift, and go to state 75
    LPAR    shift, and go to state 76

    e_bool      go to state 131
    relacional  go to state 78
    expresion   go to state 79
    variable    go to state 80


State 104

   54 relacional: relacional NOTEQUAL . relacional

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    relacional  go to state 132
    expresion   go to state 79
    variable    go to state 80


State 105

   55 relacional: relacional EQUAL . relacional

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    relacional  go to state 133
    expresion   go to state 79
    variable    go to state 80


State 106

   53 relacional: relacional GT . relacional

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    relacional  go to state 134
    expresion   go to state 79
    variable    go to state 80


State 107

   52 relacional: relacional LT . relacional

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    relacional  go to state 135
    expresion   go to state 79
    variable    go to state 80


State 108

   51 relacional: relacional LESS . relacional

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    relacional  go to state 136
    expresion   go to state 79
    variable    go to state 80


State 109

   50 relacional: relacional GREATER . relacional

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    relacional  go to state 137
    expresion   go to state 79
    variable    go to state 80


State 110

   58 expresion: expresion MINUS . expresion

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    expresion  go to state 138
    variable   go to state 80


State 111

   57 expresion: expresion PLUS . expresion

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    expresion  go to state 139
    variable   go to state 80


State 112

   61 expresion: expresion MOD . expresion

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    expresion  go to state 140
    variable   go to state 80


State 113

   60 expresion: expresion DIV . expresion

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    expresion  go to state 141
    variable   go to state 80


State 114

   59 expresion: expresion MUL . expresion

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    LPAR    shift, and go to state 76

    expresion  go to state 142
    variable   go to state 80


State 115

   31 sentencia: DO sentencia WHILE . e_bool SEMICOLON

    ID      shift, and go to state 51
    NUM     shift, and go to state 70
    STRING  shift, and go to state 71
    CHAR    shift, and go to state 72
    TRUE    shift, and go to state 73
    FALSE   shift, and go to state 74
    NOT     shift, and go to state 75
    LPAR    shift, and go to state 76

    e_bool      go to state 143
    relacional  go to state 78
    expresion   go to state 79
    variable    go to state 80


State 116

   34 sentencia: PRINT expresion SEMICOLON .

    $default  reduce using rule 34 (sentencia)


State 117

   35 sentencia: SCAN variable SEMICOLON .

    $default  reduce using rule 35 (sentencia)


State 118

   37 sentencia: RETURN expresion SEMICOLON .

    $default  reduce using rule 37 (sentencia)


State 119

   32 sentencia: SWITCH LPAR variable . RPAR DO casos predeterminado END

    RPAR  shift, and go to state 144


State 120

   28 sentencia: IF e_bool THEN . sentencia END
   29          | IF e_bool THEN . sentencia ELSE sentencia END

    ID      shift, and go to state 51
    START   shift, and go to state 52
    WHILE   shift, and go to state 53
    DO      shift, and go to state 54
    PRINT   shift, and go to state 55
    SCAN    shift, and go to state 56
    RETURN  shift, and go to state 57
    SWITCH  shift, and go to state 58
    BREAK   shift, and go to state 59
    IF      shift, and go to state 60

    sentencia  go to state 145
    variable   go to state 63


State 121

   16 funciones: DEF tipo ID LPAR argumentos RPAR START declaraciones sentencias END funciones .

    $default  reduce using rule 16 (funciones)


State 122

   33 sentencia: variable ASSIGN expresion . SEMICOLON
   57 expresion: expresion . PLUS expresion
